# AoC-2017

./: AoC-2017.sln  CorruptionChecksum.sln  Makefile  README.md  SpiralMemory.sln  corruptionchecksum.c  corruptionchecksum.h  inversecaptcha.c  part_two.h
.github/workflows/: aoc-badges.yml
CorruptionChecksum/: abstract_part.h
Day1/: Makefile  Program.cs  README.md  inversecaptcha.h
Day2/: Program.cs  README.md
Day2/CorruptionChecksum/: CorruptionChecksum.vcxproj  CorruptionChecksum.vcxproj.filters  corruption_checksum.cpp  part_one.cpp  part_two.cpp
Day3/: README.md
Day3/SpiralMemory/: SpiralMemory.vcxproj.filters  abstract_part.h  part_one.cpp  part_one.h  spiral_memory.h
Day4/: CMakeLists.txt  README.md  abstract_part.cc  hepassphrases.cc  hepassphrases.h  part_one.cc  part_one.h
SpiralMemory/: SpiralMemory.vcxproj  abstract_part.cpp  spiral_memory.cpp
